--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "rockpaperscissors" : "node functions/RockPaperScissors.js",
     "sleepdebtcalculator" : "node functions/SleepDebtCalculator.js",
-    "trainingdays" : "node scope/trainingDays.js"
+    "trainingdays" : "node scope/trainingDays.js",
+    "secretmessage" : "node arrays/secretMessage.js"
   },
   "author": "",
   "license": "ISC",
